# axum_assessment_bookstore_api

./: .env_example  .gitignore  Cargo.toml  README.md  check.sh  compose.yaml
entity/: Cargo.toml
entity/src/entities/: authors.rs  book_authors.rs  books.rs  mod.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230724_130406_create_authors.rs  m20230724_133748_create_books.rs  m20230724_133757_create_book_authors.rs  m20230725_132431_seed_authors.rs  m20230725_135133_seed_books.rs  m20230725_140752_seed_book_authors.rs  main.rs
src/: config.rs  lib.rs  main.rs
src/db/: author_queries.rs  book_author_queries.rs  book_queries.rs  mod.rs
src/models/: author.rs  book.rs  book_author.rs  mod.rs
src/router/: author.rs  book.rs  book_author.rs  mod.rs
src/types/: author.rs  book.rs  book_author.rs  mod.rs
tests/: authors.rs  books.rs  integration.rs  models.rs  types.rs
