[package]
name = "axum_assessment_bookstore_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
eyre = "0.6.8"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
sea-orm = { version = "0.11.3", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
serde = { version = "1.0.173", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
migration = { path = "./migration" }
entity = { path = "./entity" }
tower-http = { version = "0.4.3", features = ["trace"] }
thiserror = "1.0.44"

[workspace]
members = [
  "migration",
  "entity"
]
